<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        app:srcCompat="@drawable/ic_app" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/queres_jugar"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/apuesto"
        android:textSize="28sp" />


        <LinearLayout
            android:id="@+id/apuestalayaut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/txbCreditosDialog"
                android:layout_width="133dp"
                android:layout_height="64dp"
                android:layout_marginLeft="105dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="5"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/btnApuesta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_go" />
        </LinearLayout>
    <TextView
        android:id="@+id/txbTipo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:text="O tambien.."
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnGratis"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txbTipo1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/jugar_gratis"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:layout_gravity="center"/>
</LinearLayout>